# clickdetect

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  cliff.toml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: container.yml  pypi.yml  release.yml
clickdetect/: __init__.py
clickdetect/api/: detector.py  health.py  rules.py
clickdetect/detector/: config.py  detector.py  hooks.py  manager.py  plugin.py  rules.py  runner.py  utils.py  watcher.py
clickdetect/detector/datasource/: __init__.py  base.py  clickhouse.py  databricks.py  duckdb.py  elasticsearch.py  loki.py  opensearch.py  opensearch_ppl.py  postgresql.py  victorialogs.py
clickdetect/detector/plugins/: base.py  clickagentic.py  example.py
clickdetect/detector/store/: __init__.py  asyncStore.py  datastore.py  redisStore.py
clickdetect/detector/webhooks/: __init__.py  alertmanager.py  base.py  discord.py  email.py  forgejo.py  generic.py  iris.py  matrix.py  opsgenie.py  slack.py  teams.py  telegram.py  thehive.py
docs/: mkdocs.yml
docs/docs/: .authors.yml  api.md  getting-started.md  high-availability.md  index.md  installation.md  rules.md  runner.md  sigma.md
docs/docs/assets/: clickdetect-runner-demo.avif
docs/docs/blog/posts/: 1-first-commit.md  2-clickdetect-cicd.md  changelog-0.1.0.md  changelog-1.0.0.md  changelog-1.0.1.md  changelog-1.1.0.md  changelog-1.1.1.md  changelog-1.10.0.md  changelog-1.11.0.md  changelog-1.11.1.md  changelog-1.11.2.md  changelog-1.12.0.md  changelog-1.12.1.md  changelog-1.12.2.md  changelog-1.13.0.md  changelog-1.14.0.md  changelog-1.14.1.md  changelog-1.15.0.md  changelog-1.15.1.md  changelog-1.16.0.md  changelog-1.17.0.md  changelog-1.18.0.md  changelog-1.18.1.md  changelog-1.2.0.md  changelog-1.2.1.md  changelog-1.3.0.md  changelog-1.4.0.md  changelog-1.5.0.md  changelog-1.6.0.md  changelog-1.7.0.md  changelog-1.8.0.md  changelog-1.8.1.md  changelog-1.9.0.md
docs/docs/blog/posts/advanced-security-alerting-with-duckdb-and-deltalake/: advanced-security-alerting-with-duckdb-and-deltalake.md
docs/docs/blog/posts/ai-soc-agent-with-clickdetect/: ai-soc-agent-with-clickdetect.md
docs/docs/blog/posts/building-a-powerful-siem-with-clickhouse-and-clickdetect/: building-a-powerful-siem-with-clickhouse-and-clickdetect.md
docs/docs/blog/posts/elastalert-is-dead-long-live-clickdetect/: elastalert-is-dead-long-live-clickdetect.md
docs/docs/blog/posts/extending-wazuh-capabilities-with-clickdetect-opensearch_ppl-and-sigma-rules/: index.md
docs/docs/datasource/: clickhouse.md  databricks.md  duckdb.md  elasticsearch.md  index.md  loki.md  opensearch-ppl.md  opensearch.md  postgresql.md  victorialogs.md
docs/docs/plugin/: clickagentic.md  index.md
docs/docs/webhooks/: alertmanager.md  email.md  forgejo.md  generic.md  index.md  iris.md  matrix.md  opsgenie.md  slack.md  teams.md  telegram.md  thehive.md
example_rules/: README.md  runner.yml
example_rules/clickhouse/rules/: base.yml
example_rules/clickhouse/rules/ad/: ad_admin_group_changed.yml  ad_dc_logon_failure.yml  ad_multiple_kerberos_authentication_failures.yml
example_rules/clickhouse/rules/behavior/: behavior_attack_detected.yml
example_rules/clickhouse/rules/crowdstrike/: crowdstrike_new_alert.yml
example_rules/clickhouse/rules/fortigate/: fortigate_configuration_changed.yml  fortigate_console_access_via_external_ip.yml  fortigate_multiple_authentication_failure_by_remote_ip.yml  fortigate_virus_detected.yml
example_rules/clickhouse/rules/windows/: windows_multiple_authentication_failures.yml  windows_multiple_windows_logon_authentication_failures.yml  windows_user_account_locked_out.yml
scripts/: list_sigma_pipelines.py  opensearch_ppl_sigma.py  release.sh
test/: test2.yml  test3.yml
test/aaa/: test3.yml
tests/: test_clickhouse_datasource.py  test_duckdb_datasource.py
(+1 files in other folders)
