[project]
name = "clickdetect"
version = "1.13.0"
description = "Generic SIEM engine detector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "apscheduler>=3.11.1",
    "asyncpg>=0.31.0",
    "clickhouse-connect>=0.10.0",
    "colorlog>=6.10.1",
    "databricks-sql-connector>=4.2.6",
    "fastapi[standard]>=0.127.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "watchfiles>=1.1.1",
]
authors = [
    { name = "Vinicius Morais", email = "me@souzo.me" }
]

[dependency-groups]
dev = [
    "git-cliff>=2.12.0",
    "mkdocs-material[imaging]>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-rss-plugin>=1.17.9",
    "ruff>=0.15.7",
]
clickagentic = [
    "pydantic-ai>=1.87.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.scripts]
clickdetect = "clickdetect:run"

[tool.uv]
package = true
